--- a/package.json
+++ b/package.json
@@ -3,11 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.8.0",
+    "@mui/material": "^5.8.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@uiw/react-textarea-code-editor": "^2.0.2",
+    "i18next": "^21.8.4",
+    "mui-file-dropzone": "^4.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-dropzone": "^14.2.1",
+    "react-i18next": "^11.16.9",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.0"
   },
