Support for ERC721 and ERC1155

--- a/package.json
+++ b/package.json
@@ -3,28 +3,126 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "@mui/icons-material": "^5.8.0",
-    "@mui/material": "^5.8.1",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
+    "@auth0/auth0-spa-js": "^1.14.0",
+    "@emotion/cache": "^11.4.0",
+    "@emotion/react": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
+    "@hookform/resolvers": "1.3.5",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.6.1",
+    "@mui/lab": "^5.0.0-alpha.50",
+    "@mui/material": "^5.0.3",
+    "@mui/styles": "^5.0.1",
+    "@mui/system": "^5.0.3",
+    "@mui/utils": "^5.0.1",
+    "@mui/x-data-grid": "^5.0.0-beta.3",
+    "@remix-project/remix-solidity": "^0.4.9",
+    "@tabler/icons": "^1.39.1",
     "@uiw/react-textarea-code-editor": "^2.0.2",
+    "@walletconnect/client": "^1.7.5",
+    "@walletconnect/qrcode-modal": "^1.7.5",
+    "@walletconnect/web3-provider": "^1.7.5",
+    "@web3auth/web3auth": "^1.0.0",
+    "ace-builds": "^1.4.13",
+    "apexcharts": "^3.26.1",
+    "assert": "^2.0.0",
+    "axios": "^0.21.1",
+    "axios-mock-adapter": "^1.19.0",
+    "chance": "^1.1.7",
+    "clsx": "^1.1.1",
+    "csstype": "^3.0.8",
+    "date-fns": "^2.21.1",
+    "draft-js": "^0.11.7",
+    "emoji-picker-react": "^3.4.4",
+    "esbuild-wasm": "^0.14.13",
+    "ethers": "^5.6.2",
+    "firebase": "^8.3.1",
+    "formik": "^2.2.6",
+    "framer-motion": "^4.1.13",
+    "fs": "^0.0.1-security",
+    "history": "^5.0.0",
+    "https-browserify": "^1.0.0",
     "i18next": "^21.8.4",
+    "jsonwebtoken": "^8.5.1",
+    "jss": "^10.7.1",
+    "jss-rtl": "^0.3.0",
+    "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.21",
+    "magic-sdk": "^8.1.1",
+    "material-ui-popup-state": "^1.8.0",
+    "moment": "^2.29.1",
+    "moralis": "^1.7.0",
+    "mui-color": "^2.0.0-beta.2",
     "mui-file-dropzone": "^4.0.1",
+    "os": "^0.1.2",
+    "os-browserify": "^0.3.0",
+    "prop-types": "^15.7.2",
     "react": "^18.1.0",
+    "react-ace": "^9.5.0",
+    "react-apexcharts": "^1.3.7",
+    "react-app-rewired": "^2.2.1",
+    "react-beautiful-dnd": "^13.1.0",
+    "react-color": "^2.19.3",
+    "react-compound-timer": "^1.2.0",
+    "react-copy-to-clipboard": "^5.0.3",
+    "react-currency-format": "^1.0.0",
+    "react-dappify": "^0.0.25",
+    "react-device-detect": "^1.17.0",
     "react-dom": "^18.1.0",
+    "react-draft-wysiwyg": "^1.14.6",
+    "react-draggable": "^4.4.3",
     "react-dropzone": "^14.2.1",
-    "react-i18next": "^11.16.9",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.0"
+    "react-google-recaptcha": "^2.1.0",
+    "react-hook-form": "^6.15.5",
+    "react-i18next": "^11.17.0",
+    "react-images": "^1.2.0-beta.6",
+    "react-intersection-observer": "^8.32.0",
+    "react-intl": "^5.14.0",
+    "react-markdown": "^6.0.0",
+    "react-moralis": "^1.3.5",
+    "react-perfect-scrollbar": "^1.5.8",
+    "react-qr-code": "^2.0.3",
+    "react-quill": "^1.3.5",
+    "react-redux": "^7.1.0-rc.1",
+    "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.0.0-beta.5",
+    "react-scripts": "^5.0.1",
+    "react-slick": "^0.28.1",
+    "react-spring": "^8.0.27",
+    "react-syntax-highlighter": "^15.4.3",
+    "react-text-mask": "^5.4.3",
+    "react-to-print": "^2.12.4",
+    "react-window": "^1.8.6",
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
+    "remark-gfm": "^1.0.0",
+    "slick-carousel": "^1.8.1",
+    "solc": "^0.8.11",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "stylis-plugin-rtl": "^2.0.2",
+    "tldts": "^5.7.77",
+    "url": "^0.11.0",
+    "uuid": "^8.3.2",
+    "walletlink": "^2.5.0",
+    "web-vitals": "^2.1.4",
+    "web3": "^1.7.1",
+    "web3modal": "^1.9.5",
+    "yup": "^0.32.9"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "export HTTPS=true&&SSL_CRT_FILE=cert.pem&&SSL_KEY_FILE=key.pem env-cmd -f .env.${BUILD_ENV} react-app-rewired start",
+    "start:local": "BUILD_ENV=local npm run start",
+    "start:development": "BUILD_ENV=development npm run start",
+    "start:staging": "BUILD_ENV=staging npm run start",
+    "start:production": "BUILD_ENV=production npm run start",
+    "build": "env-cmd -f .env.${BUILD_ENV} react-app-rewired build",
+    "build:local": "BUILD_ENV=local npm run build",
+    "build:development": "BUILD_ENV=development npm run build",
+    "build:staging": "BUILD_ENV=staging npm run build",
+    "build:production": "BUILD_ENV=production npm run build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
     "extends": [
@@ -43,5 +141,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "buffer": "^6.0.3",
+    "process": "^0.11.10"
   }
 }
