--- a/public/dappify.json
+++ b/public/dappify.json
@@ -34,68 +34,43 @@
       "resources": {
         "en": {
           "translation": {
-            "Title": "Your Title",
-            "Tagline": "Your Tagline",
-            "Get started": "Get started",
-            "Explore": "Discover",
-            "Stats": "Activity",
-            "Search items": "Search items, collections and accounts",
-            "Purchase": "Buy",
-            "View artwork": "View Artwork",
-            "Price": "Price",
-            "Not for sale": "Not for sale",
-            "Browse by category": "Browse By Category",
-            "Top sellers": "Top Sellers",
-            "New items": "New Items",
-            "Hot collections": "Hot Collections",
-            "Connect your wallet": "Connect your wallet",
-            "Most popular": "Most Popular",
-            "Metamask": "Start exploring blockchain applications in seconds. Trusted by over 1 million users worldwide.",
-            "Connected to:": "Connected to:",
-            "Switch to:": "Switch to:",
-            "My profile": "My Profile",
-            "Logout": "Logout",
-            "Balance": "Balance",
-            "Owned": "Owned",
-            "On sale": "On Sale",
-            "Withdraw": "Withdraw",
-            "Edit profile": "Edit Profile",
-            "Member since": "Member since",
-            "Username": "Username",
-            "Username placeholder": "Your unique username",
-            "Bio": "Bio",
-            "Bio placeholder": "Tell everyone who you are!",
-            "Twitter": "Twitter",
-            "Twitter placeholder": "Your personal twitter account",
-            "Wallet": "Wallet",
-            "Wallet placeholder": "Your wallet address",
-            "Profile": "Profile",
-            "Upload": "Upload",
-            "Profile image": "Profile Image",
-            "Profile banner": "Profile Banner",
-            "Update profile": "Update Profile",
-            "Category": "Categories",
-            "None": "None",
-            "Cancel": "Cancel",
-            "Close": "Close",
-            "Load More": "Load More",
-            "Confirm": "Confirm",
-            "Please wait": "Please wait",
-            "Select a category": "Select a category",
-            "Details": "Details",
-            "History": "History",
-            "Owner": "Owner",
-            "Purchase confirmation": "Do you want to buy {{name}} for {{price}} {{unit}}?",
-            "Withdraw confirmation": " This action will remove this item from being accessible in this marketplace for buyers. It will carry additional gas costs to continue the process with the smart contract.",
-            "Withdraw from marketplace": "Withdraw from marketplace",
-            "Edit confirmation": "Set a new price for item in marketplace {{name}}",
-            "Edit pricing": "Edit pricing",
-            "Owner not verified": "This owner is not verified. Purchase this item at your own risk",
-            "Owner verified": "This owner is verified",
-            "Transaction successful": "Your transaction was successful!",
-            "Please do not close this window": "Please don't close this window until we have confirmed your transaction! we will let you know shortly",
-            "WalletConnect": "Open source protocol for connecting decentralised applications to mobile wallets.",
-            "Coinbase": "The easiest and most secure crypto wallet. No Coinbase account required."
+            "My NFT": "My NFT",
+            "Advanced (Optional)": "Advanced (Optional)",
+            "Metadata Source": "Metadata Source",
+            "Your minting was successful": "Your minting was successful",
+            "View your transaction": "View your transaction",
+            "Your token has been minted": "Your token has been minted",
+            "Connect your wallet to get started!": "Connect your wallet to get started!",
+            "Create your NFT": "Create your NFT",
+            "Please wait...": "Please wait...",
+            "Welcome": "Welcome",
+            "NFT Forge": "NFT Forge",
+            "The simplest, yet most flexible way to create NFTs": "The simplest, yet most flexible way to create NFTs",
+            "Anywhere": "Anywhere",
+            "Drop your jpeg, png, mp3 audio and mp4 videos up to 10mb": "Drop your jpeg, png, mp3 audio and mp4 videos up to 10mb",
+            "Title": "Tile",
+            "Description": "Description",
+            "# of copies": "# of copies",
+            "1. Re-sale Royalties": "1. Re-sale Royalties",
+            "You, as a content creator, will receive a royalty based on the percentage everytime this NFT is being sold in a marketplace supporting": "You, as a content creator, will receive a royalty based on the percentage everytime this NFT is being sold in a marketplace supporting",
+            "You can add custom fields to the metadata of this NFT in case you need to store custom properties e.g. promo_code: 1155 in order to support different": "You can add custom fields to the metadata of this NFT in case you need to store custom properties e.g. promo_code: 1155 in order to support different",
+            "Royalties": "Royalties",
+            "Social Media URL (optional)": "Social Media URL (optional)",
+            "2. Additional Fields": "2. Additional Fields",
+            "Add Custom Metadata Fields": "Add Custom Metadata Fields",
+            "Edit the metadata source code directly": "Edit the metadata source code directly",
+            "We recommend setting attributes through the basic/advanced tabs functionalities but if they fall short you can always edit manually. Notice that modifying this file will change the metadata, but these changes may not be visible by other tabs.": "We recommend setting attributes through the basic/advanced tabs functionalities but if they fall short you can always edit manually. Notice that modifying this file will change the metadata, but these changes may not be visible by other tabs.", 
+            "Invalid JSON structure": "Invalid JSON structure",
+            "Gas fees apply": "Gas fees apply",
+            "Creating a new Collection in": "Creating a new Collection in",
+            "Display name": "Display name",
+            "Symbol e.g BAYC": "Symbol e.g BAYC",
+            "External URL": "External URL",
+            "Your collection is now live": "Your collection is now live",
+            "View your collection": "View your collection",
+            "Create collection": "Create collection",
+            "Close and continue": "Close and continue",
+            "Use an existing NFT collection or launch your new one by deploying a smart contract": "Use an existing NFT collection or launch your new one by deploying a smart contract"
           }
         }
       },
