--- a/public/dappify.json
+++ b/public/dappify.json
@@ -2,10 +2,10 @@
   "id": "tokenizer",
   "name": "NFT Creator",
   "description": "From music to real estate, create nft and tokenize anything!",
-  "source": "https://github.com/DappifyWeb3/marketplace-ui",
-  "guide": "https://github.com/DappifyWeb3/marketplace-ui",
+  "source": "https://github.com/DappifyWeb3/tokenizer-ui",
+  "guide": "https://github.com/DappifyWeb3/tokenizer-ui/wiki",
   "image": "https://www.domusweb.it/content/dam/domusweb/en/news/2021/05/13/how-to-mint-your-own-nft-in-5-simple-steps/nft.jpg.foto.rbig.jpg",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "category": "nft",
     "contract": {
         "0x61": null,
@@ -42,7 +42,7 @@
             "Your token has been minted": "Your token has been minted",
             "Connect your wallet to get started!": "Connect your wallet to get started!",
             "Create your NFT": "Create your NFT",
-            "Please wait...": "Please wait...",
+            "Please confirm the transaction from your wallet and wait...": "Please confirm the transaction from your wallet and wait...",
             "Welcome": "Welcome",
             "NFT Forge": "NFT Forge",
             "The simplest, yet most flexible way to create NFTs": "The simplest, yet most flexible way to create NFTs",
