Support CI/CD (#13)

--- a/package.json
+++ b/package.json
@@ -113,8 +113,8 @@
   },
   "scripts": {
     "start": "export HTTPS=true&&SSL_CRT_FILE=cert.pem&&SSL_KEY_FILE=key.pem env-cmd -f .env react-app-rewired start",
-    "start:cli": "react-app-rewired start",
-    "build:cli": "react-app-rewired build",
+    "start:cli": "react-scripts start",
+    "build:cli":"react-scripts build",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject"
   },
