--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "axios-mock-adapter": "^1.19.0",
     "chance": "^1.1.7",
     "clsx": "^1.1.1",
+    "crypto": "^1.0.1",
     "csstype": "^3.0.8",
     "date-fns": "^2.21.1",
     "draft-js": "^0.11.7",
@@ -113,7 +114,7 @@
   "scripts": {
     "start": "export HTTPS=true&&SSL_CRT_FILE=cert.pem&&SSL_KEY_FILE=key.pem env-cmd -f .env react-app-rewired start",
     "start:cli": "react-scripts start",
-    "build:cli":"react-scripts build",
+    "build:cli": "react-scripts build",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject"
   },
