--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "axios-mock-adapter": "^1.19.0",
     "chance": "^1.1.7",
     "clsx": "^1.1.1",
-    "crypto": "^1.0.1",
+    "crypto-browserify": "^3.12.0",
     "csstype": "^3.0.8",
     "date-fns": "^2.21.1",
     "draft-js": "^0.11.7",
@@ -139,8 +139,5 @@
   "devDependencies": {
     "buffer": "^6.0.3",
     "process": "^0.11.10"
-  },
-  "browser": {
-    "crypto": false
   }
 }
