--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "axios-mock-adapter": "^1.19.0",
     "chance": "^1.1.7",
     "clsx": "^1.1.1",
+    "crypto-browserify": "^3.12.0",
     "csstype": "^3.0.8",
     "date-fns": "^2.21.1",
     "draft-js": "^0.11.7",
@@ -111,16 +112,9 @@
     "yup": "^0.32.9"
   },
   "scripts": {
-    "start": "export HTTPS=true&&SSL_CRT_FILE=cert.pem&&SSL_KEY_FILE=key.pem env-cmd -f .env.${BUILD_ENV} react-app-rewired start",
-    "start:local": "BUILD_ENV=local npm run start",
-    "start:development": "BUILD_ENV=development npm run start",
-    "start:staging": "BUILD_ENV=staging npm run start",
-    "start:production": "BUILD_ENV=production npm run start",
-    "build": "env-cmd -f .env.${BUILD_ENV} react-app-rewired build",
-    "build:local": "BUILD_ENV=local npm run build",
-    "build:development": "BUILD_ENV=development npm run build",
-    "build:staging": "BUILD_ENV=staging npm run build",
-    "build:production": "BUILD_ENV=production npm run build",
+    "start": "export HTTPS=true&&SSL_CRT_FILE=cert.pem&&SSL_KEY_FILE=key.pem env-cmd -f .env react-app-rewired start",
+    "start:cli": "react-app-rewired start",
+    "build:cli": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject"
   },
@@ -145,5 +139,8 @@
   "devDependencies": {
     "buffer": "^6.0.3",
     "process": "^0.11.10"
+  },
+  "browser": {
+    "crypto": false
   }
 }
