Setting default path as template name since now the platform redirects templates as path instead of subdomains

--- a/public/dappify.json
+++ b/public/dappify.json
@@ -3,7 +3,7 @@
   "name": "NFT Creator",
   "description": "From music to real estate, create nft and tokenize anything!",
   "source": "https://github.com/DappifyWeb3/tokenizer-ui",
-  "guide": "https://github.com/DappifyWeb3/tokenizer-ui/wiki/Getting-Started",
+  "guide": "https://mirage-property-c46.notion.site/NFT-Creator-a726636864cf4f7c9c452a2bb3622fb1",
   "image": "https://www.domusweb.it/content/dam/domusweb/en/news/2021/05/13/how-to-mint-your-own-nft-in-5-simple-steps/nft.jpg.foto.rbig.jpg",
   "sample": "https://encode.dappify.com/",
   "version": "1.0.0",
