--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tokenizer-ui",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": true,
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.14.0",
@@ -16,6 +16,7 @@
     "@mui/system": "^5.0.3",
     "@mui/utils": "^5.0.1",
     "@mui/x-data-grid": "^5.0.0-beta.3",
+    "@reach/router": "^1.3.4",
     "@remix-project/remix-solidity": "^0.4.9",
     "@tabler/icons": "^1.39.1",
     "@uiw/react-textarea-code-editor": "^2.0.2",
