Fix/validation metadata (#22)
* add warning if metadata not complete

* added .env to gitignore

* add dependency env-cmd

* dropzone new dependency and persistent image preview

* remove old unused dropzone dependency

* added warning for json-editor when file uploaded and image file state persistence fixed

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "date-fns": "^2.21.1",
     "draft-js": "^0.11.7",
     "emoji-picker-react": "^3.4.4",
+    "env-cmd": "^10.1.0",
     "esbuild-wasm": "^0.14.13",
     "ethers": "^5.6.2",
     "firebase": "^8.3.1",
@@ -55,7 +56,6 @@
     "moment": "^2.29.1",
     "moralis": "^1.7.0",
     "mui-color": "^2.0.0-beta.2",
-    "mui-file-dropzone": "^4.0.1",
     "os": "^0.1.2",
     "os-browserify": "^0.3.0",
     "prop-types": "^15.7.2",
@@ -73,7 +73,7 @@
     "react-dom": "^18.1.0",
     "react-draft-wysiwyg": "^1.14.6",
     "react-draggable": "^4.4.3",
-    "react-dropzone": "^14.2.1",
+    "react-dropzone": "^14.2.2",
     "react-google-recaptcha": "^2.1.0",
     "react-hook-form": "^6.15.5",
     "react-i18next": "^11.17.0",
