--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "react-compound-timer": "^1.2.0",
     "react-copy-to-clipboard": "^5.0.3",
     "react-currency-format": "^1.0.0",
-    "react-dappify": "^1.0.2",
+    "react-dappify": "^1.0.41",
     "react-device-detect": "^1.17.0",
     "react-dom": "^18.1.0",
     "react-draft-wysiwyg": "^1.14.6",
@@ -88,7 +88,7 @@
     "react-redux": "^7.1.0-rc.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.0.0-beta.5",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^4.0.3",
     "react-slick": "^0.28.1",
     "react-spring": "^8.0.27",
     "react-syntax-highlighter": "^15.4.3",
@@ -113,11 +113,15 @@
     "yup": "^0.32.9"
   },
   "scripts": {
-    "start": "export HTTPS=true&&SSL_CRT_FILE=cert.pem&&SSL_KEY_FILE=key.pem env-cmd -f .env react-app-rewired start",
-    "start:cli": "react-app-rewired start",
-    "build:cli": "react-app-rewired build",
-    "test": "react-app-rewired test",
-    "eject": "react-app-rewired eject"
+    "start": "export HTTPS=true&&SSL_CRT_FILE=cert.pem&&SSL_KEY_FILE=key.pem env-cmd -f .env react-scripts start",
+    "build": "env-cmd -f .env react-scripts build",
+    "start:cli": "react-scripts start",
+    "build:cli": "react-scripts build",
+    "test": "jest --collectCoverage=true",
+    "coverage": "jest --coverage",
+    "eject": "react-scripts eject",
+    "lint": "eslint --fix --ext .js,.jsx .",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
@@ -139,6 +143,7 @@
   },
   "devDependencies": {
     "buffer": "^6.0.3",
+    "husky": "^8.0.1",
     "process": "^0.11.10"
   },
   "browser": {
